--- a/page2.html
+++ b/page2.html
@@ -124,7 +124,7 @@ Happy traveling and happy birthday! 🌍✈️</p>
     <button class="slider-btn next-btn" onclick="nextSlide()">❯</button>
   </div>
 
-  <button class="btn-back" onclick="location.href='ulangtahun.html'">← Kembali ke Halaman Utama</button>
+  <button class="btn-back" onclick="location.href='index.html'">← Kembali ke Halaman Utama</button>
 
   <script>
     const images = document.querySelectorAll('.slider-container img');
